fix overflow styling in add device and error handling fix

--- a/src/streamer-server/public/streamer-remote/components/add-device/add-device.css
+++ b/src/streamer-server/public/streamer-remote/components/add-device/add-device.css
@@ -18,6 +18,7 @@
   top: 50%;
   left: 50%;
   width: calc(100% - 66px);
+  max-height: calc(100% - 66px);
   max-width: 1400px;
   overflow: auto;
   border-radius: 4px;
